@@ -22,6 +22,9 @@
 !  Copyright (c) 2009-2011,
 !  Technische Universitaet Muenchen, Germany
 !
+!  Copyright (c) 2016,
+!  Technische Universitaet Darmstadt, Germany
+!
 !  This software may be modified and distributed under the terms of
 !  a BSD-style license.  See the COPYING file in the package base
 !  directory for details.
@@ -38,7 +41,7 @@
 #ifdef __PGI
 #define SCOREP_USER_DECL_VAR( type, variable, value ) type variable
 #else
-#define SCOREP_USER_DECL_VAR( type, variable, value ) type :: variable = value
+#define SCOREP_USER_DECL_VAR( type, variable, value ) type, save :: variable = value
 #endif
 
 !************************************************************* Data types
